tests/setup.ts
// Test Setup Configuration
import { config } from 'dotenv';

// Load test environment variables
config({ path: '.env.test' });

// Global test setup
beforeAll(async () => {
  // TODO: Setup test database
  // TODO: Initialize test dependencies
});

afterAll(async () => {
  // TODO: Cleanup test database
  // TODO: Close connections
});

// Mock console methods to reduce noise in tests
global.console = {
  ...console,
  // Uncomment to silence logs during tests
  // log: jest.fn(),
  // error: jest.fn(),
  // warn: jest.fn(),
}; 